--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,15 +6,21 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  left: 0;
+  right: 0;
 }
 
 .footer {
   display: flex;
   flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
 }
 
 .footer a {
@@ -53,7 +59,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: #0070f3;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
